[package]
name = "oh-bother"
version = "0.1.0"
authors = ["Matt Chun-Lum <mchunlum@gmail.com>"]

[[bin]]
bench = false
path = "src/main.rs"
name = "ob"

[profile.release]
lto = true

[dependencies]
clap = { version = "2.16.1", features = ["yaml"] }
hyper = "~0.9.10"
prettytable-rs = "^0.6"
rpassword = "0.3"
rustc-serialize = "*"
url = "*"
uuid = { version = "0.2", features = ["v4"] }
yaml-rust = "*"
