[package]
name = "oh-bother"
version = "0.2.0"
authors = ["Matt Chun-Lum <mchunlum@gmail.com>"]

[[bin]]
bench = false
path = "src/main.rs"
name = "ob"

[profile.release]
lto = true

[dependencies]
clap = { version = "2.16.1", features = ["yaml"] }
eprompt = { git = "https://github.com/mattcl/eprompt.git" }
error-chain = "0.7.2"
hyper = "^0.9"
prettytable-rs = "^0.6"
rpassword = "0.3"
rustc-serialize = "*"
url = "*"
yaml-rust = "*"
